Render form HTML if you're signed in or not
It's not used when you're not signed in, because the buttons are just
links, but it simplifies the template.

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -16,13 +16,10 @@
         because we love the civic tech community.
         By becoming a supporter you can help us make it even more incredibly useful.
   .row.pricing.row-centered
-    - if user_signed_in?
-      = form_tag (current_user.supporter? ? supporter_path(current_user) : supporters_path), id: "supporter-signup-form", method: (current_user.supporter? ? :patch : :post) do
-        = hidden_field_tag "stripeToken"
-        = hidden_field_tag :plan_id, params[:plan_id]
+    = form_tag (current_user && current_user.supporter? ? supporter_path(current_user) : supporters_path), id: "supporter-signup-form", method: (current_user && current_user.supporter? ? :patch : :post) do
+      = hidden_field_tag "stripeToken"
+      = hidden_field_tag :plan_id, params[:plan_id]
 
-        = render partial: "plans"
-    - else
       = render partial: "plans"
 
   - if user_signed_in?
