--- a/app/views/supporters/_plan_action.html.haml
+++ b/app/views/supporters/_plan_action.html.haml
@@ -10,7 +10,7 @@
                id: plan.stripe_plan_id,
                class: "btn btn-default btn-lg",
                data: {key: Rails.configuration.stripe[:publishable_key],
-                      description: description,
+                      description: plan.name,
                       amount: amount,
                       email: current_user.email,
                       plan_id: plan.stripe_plan_id,
