--- a/app/views/supporters/_plan_action.html.haml
+++ b/app/views/supporters/_plan_action.html.haml
@@ -11,7 +11,7 @@
                class: "btn btn-default btn-lg",
                data: {key: Rails.configuration.stripe[:publishable_key],
                       description: plan.name,
-                      amount: amount,
+                      amount: plan.price_in_cents,
                       email: current_user.email,
                       plan_id: plan.stripe_plan_id,
                       stripe: !current_user.supporter? }
