Use plan name in successful creation flash

--- a/app/views/supporters/_create_flash.html.haml
+++ b/app/views/supporters/_create_flash.html.haml
@@ -1,1 +1,1 @@
-Woohoo! Very nice person you are, thanks for becoming a supporter.
+Woohoo! Very nice person you are, thanks for becoming a #{current_user.plan.name}.
