--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -101,17 +101,25 @@
     %li.active{role: "presentation"}
       = link_to "#example-curl", 'aria-controls' => "#examples-curl", role: "tab", 'data-toggle' => "tab" do
         Curl
-    - Morph::Language.languages_supported.each_with_index do |l, i|
-      %li{role: "presentation"}
-        = link_to "#example-#{l.key}", 'aria-controls' => "#example-#{l.key}", role: "tab", 'data-toggle' => "tab" do
-          = language_name_with_icon(l.key, size: "20x20")
+    %li{role: "presentation"}
+      = link_to "#example-ruby", 'aria-controls' => "#example-ruby", role: "tab", 'data-toggle' => "tab" do
+        = language_name_with_icon(:ruby, size: "20x20")
+    %li{role: "presentation"}
+      = link_to "#example-python", 'aria-controls' => "#example-python", role: "tab", 'data-toggle' => "tab" do
+        = language_name_with_icon(:python, size: "20x20")
+    %li{role: "presentation"}
+      = link_to "#example-javascript", 'aria-controls' => "#example-javascript", role: "tab", 'data-toggle' => "tab" do
+        Javascript
 
   .tab-content
     .tab-pane.active{role: "tabpanel", id: "example-curl"}
       = render "documentation/api_examples/curl"
-    - Morph::Language.languages_supported.each_with_index do |l, i|
-      .tab-pane{role: "tabpanel", id: "example-#{l.key}"}
-        = render "documentation/api_examples/#{l.key}"
+    .tab-pane{role: "tabpanel", id: "example-ruby"}
+      = render "documentation/api_examples/ruby"
+    .tab-pane{role: "tabpanel", id: "example-python"}
+      = render "documentation/api_examples/python"
+    .tab-pane{role: "tabpanel", id: "example-javascript"}
+      = render "documentation/api_examples/javascript"
 
 :javascript
   $(function() {
