--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -6,3 +6,12 @@
   = render "signed_out_index"
 
 = render "vanity_stats"
+
+.container
+  .row
+    .col-xs-12.featured-supporters-block
+      %h2 Featured supporters
+      %p These wonderful people provide financial support to make morph.io even more awesome.
+      %ul.owner-list-simple.list-unstyled.list-inline
+        - Owner.featured_supporters.each do |user|
+          %li.owner-item= link_to owner_image(user, 60), user
