Show featured supporters after new users on signed in home page

--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -77,3 +77,7 @@
                 %span.p-name Professor Wendy Bacon
                 %span.p-org Journalist, Activist
                 %span.p-country-name Australia
+
+.container
+  = render "vanity_stats"
+  = render "featured_supporters"
