--- a/app/views/static/_signed_in_index.html.haml
+++ b/app/views/static/_signed_in_index.html.haml
@@ -23,3 +23,7 @@
         - User.where.not(name: nil).order(created_at: :desc).limit(8).each do |user|
           %li.owner-item= link_to owner_image(user, 60), user
       %p= link_to "See more of the #{pluralize(User.count, "user")}…", users_path
+
+  = render "featured_supporters"
+
+= render "vanity_stats"
