Replace "plan1" class with the plan ID we use

--- a/app/views/supporters/_plan.html.haml
+++ b/app/views/supporters/_plan.html.haml
@@ -1,5 +1,5 @@
 .col-xs-3.col-centered
-  %ul.plan.plan1
+  %ul{class: "plan #{plan.stripe_plan_id}" }
     %li.plan-name
       = plan_image_tag(plan)
       = plan.name
