--- a/app/views/supporters/_plan.html.haml
+++ b/app/views/supporters/_plan.html.haml
@@ -12,6 +12,9 @@
         available to all
       - elsif plan.stripe_plan_id == "morph_standard"
         Support continued development of the open-source software that powers morph.io
+      - elsif plan.stripe_plan_id == "morph_advanced"
+        Rely on morph.io for your business or not-for-profit? Priority technical support
+        to get you answers and fixes quickly
     %li
       %strong Feel
       the warm and fuzzies
@@ -19,11 +22,15 @@
       - if plan.stripe_plan_id == "morph_basic"
         %strong Shows
         your support publically
-      - elsif plan.stripe_plan_id == "morph_standard"
+      - elsif plan.stripe_plan_id == "morph_standard" || plan.stripe_plan_id == "morph_advanced"
         %strong Be featured
         on the landing page
     %li
-      %strong Forum
-      Support
+      - if plan.stripe_plan_id == "morph_basic" || plan.stripe_plan_id == "morph_standard"
+        %strong Forum
+        Support
+      - elsif plan.stripe_plan_id == "morph_advanced"
+        %strong Priority
+        technical support
     %li.plan-action
       = render partial: "plan_action", locals: { plan: plan }
