--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -115,7 +115,8 @@
     .tab-pane.active{role: "tabpanel", id: "example-curl"}
       = render "documentation/api_examples/curl"
     .tab-pane{role: "tabpanel", id: "example-ruby"}
-      = render "documentation/api_examples/ruby"
+      :markdown
+        #{render "documentation/api_examples/ruby.md"}
     .tab-pane{role: "tabpanel", id: "example-python"}
       = render "documentation/api_examples/python"
     .tab-pane{role: "tabpanel", id: "example-javascript"}
