--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -131,25 +131,25 @@
     }
 
     function update_full_name() {
-      $("code span.full_name").html($("#scraper_full_name").val());
+      $("pre span.full_name").html($("#scraper_full_name").val());
       update_link_url();
     }
 
     function update_query() {
-      $("code span.query").html(encodeURIComponent($("#query").val()));
+      $("pre span.query").html(encodeURIComponent($("#query").val()));
       update_link_url();
     }
 
     function update_api_key() {
       api_key = $("#scraper_owner_id").val();
       $("#api_key").html(api_key);
-      $("code span.api_key").html(encodeURIComponent(api_key));
+      $("pre span.api_key").html(encodeURIComponent(api_key));
       update_link_url();
     }
 
     function update_format() {
       var format = $("#format").val();
-      $("code span.format").html(format);
+      $("pre span.format").html(format);
       update_link_url();
       if (format == "json") {
         if (!(typeof save_callback === 'undefined')) {
@@ -175,10 +175,10 @@
     function update_callback() {
       var v = $("#callback").val();
       if (v == "") {
-        $("code span.callback").html("");
+        $("pre span.callback").html("");
       }
       else {
-        $("code span.callback").html("&callback=" + v);
+        $("pre span.callback").html("&callback=" + v);
       }
       update_link_url();
     }
