Slightly improve wording

--- a/app/views/documentation/api_examples/_ruby.html.haml
+++ b/app/views/documentation/api_examples/_ruby.html.haml
@@ -5,7 +5,9 @@
     gem 'rest-client'
     gem 'json'
 
-%p Then run <code>bundle install</code>.
+%p
+  Then run <code>bundle install</code>. Use the following code snippet to get data
+  from the API.
 
 %pre
   :preserve
