Slightly improve wording

--- a/app/views/documentation/api_examples/_javascript.html.haml
+++ b/app/views/documentation/api_examples/_javascript.html.haml
@@ -1,6 +1,6 @@
 %p
   This example uses #{link_to 'jquery', 'http://jquery.com/'}.
-  Also, this example can be used in a web browser as it requests jsonp
+  Also, you could use this in a web browser as it requests jsonp.
 
 %pre
   :preserve
