--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -109,6 +109,7 @@
         = language_name_with_icon(:python, size: "18x18")
     %li{role: "presentation"}
       = link_to "#example-javascript", 'aria-controls' => "#example-javascript", role: "tab", 'data-toggle' => "tab" do
+        = image_tag('languages/javascript.png', size: '18x18')
         Javascript
 
   .tab-content
