--- a/app/views/documentation/php.html.haml
+++ b/app/views/documentation/php.html.haml
@@ -3,9 +3,9 @@
 .row
   .col-sm-9
     :markdown
-      #{render "buildpacks_php.md"}
+      #{render "documentation/libraries/php.md"}
   .col-sm-3
-    = improve_button "Improve this section", "_buildpacks_php.md"
+    = improve_button "Improve this section", "libraries/_php.md"
 
 .row
   .col-sm-9
