--- a/app/views/documentation/python.html.haml
+++ b/app/views/documentation/python.html.haml
@@ -3,9 +3,9 @@
 .row
   .col-sm-9
     :markdown
-      #{render "buildpacks_python.md"}
+      #{render "documentation/libraries/python.md"}
   .col-sm-3
-    = improve_button "Improve this section", "_buildpacks_python.md"
+    = improve_button "Improve this section", "libraries/_python.md"
 
 .row
   .col-sm-9
