--- a/app/views/documentation/ruby.html.haml
+++ b/app/views/documentation/ruby.html.haml
@@ -3,9 +3,9 @@
 .row
   .col-sm-9
     :markdown
-      #{render "buildpacks_ruby.md"}
+      #{render "documentation/libraries/ruby.md"}
   .col-sm-3
-    = improve_button "Improve this section", "_buildpacks_ruby.md"
+    = improve_button "Improve this section", "libraries/_ruby.md"
 
 .row
   .col-sm-9
