--- a/app/views/documentation/python.html.haml
+++ b/app/views/documentation/python.html.haml
@@ -26,6 +26,6 @@
 .row
   .col-sm-9
     :markdown
-      #{render "python_references.md"}
+      #{render "documentation/references/python.md"}
   .col-sm-3
-    = improve_button "Improve this section", "_python_references.md"
+    = improve_button "Improve this section", "references/_python.md"
