--- a/app/views/documentation/ruby.html.haml
+++ b/app/views/documentation/ruby.html.haml
@@ -21,6 +21,6 @@
 .row
   .col-sm-9
     :markdown
-      #{render "ruby_references.md"}
+      #{render "documentation/references/ruby.md"}
   .col-sm-3
-    = improve_button "Improve this section", "_ruby_references.md"
+    = improve_button "Improve this section", "references/_ruby.md"
