--- a/app/views/documentation/php.html.haml
+++ b/app/views/documentation/php.html.haml
@@ -21,6 +21,6 @@
 .row
   .col-sm-9
     :markdown
-      #{render "php_references.md"}
+      #{render "documentation/references/php.md"}
   .col-sm-3
-    = improve_button "Improve this section", "_php_references.md"
+    = improve_button "Improve this section", "references/_php.md"
