--- a/app/views/documentation/php.html.haml
+++ b/app/views/documentation/php.html.haml
@@ -15,8 +15,10 @@
       When there is no `composer.json` and `composer.lock` in the scraper repository, a default version of those files is installed which is as close as possible to the ScraperWiki environment as it was in January 2014. This is done to make migration from ScraperWiki as easy as possible.
 
       This is the `composer.json` that emulates the ScraperWiki environment
-    %pre
-      %code= File.read(Morph::Language.new(:php).default_config_file_path("composer.json"))
+
+    :coderay
+      #!json
+      #{File.read(Morph::Language.new(:php).default_config_file_path("composer.json"))}
 
 .row
   .col-sm-9
