Add syntax highlighting to secret values documentation

--- a/app/views/documentation/reading_secret_values/_python.html.haml
+++ b/app/views/documentation/reading_secret_values/_python.html.haml
@@ -1,5 +1,5 @@
-%pre
-  :preserve
+:coderay
+  #!python
     import os
     # Use my secret variable
     my_secret_value = os.environ['MORPH_MYSECRET']
