--- a/app/views/documentation/nodejs.html.haml
+++ b/app/views/documentation/nodejs.html.haml
@@ -1,5 +1,9 @@
 %h1= language_name_with_icon(:nodejs, size: "30x30")
 
+.alert.alert-warning
+  %i.fa.fa-bell-o.fa-lg.pull-left
+  Missing documentation. Help out by writing some.
+
 .row
   .col-sm-9
     :markdown
