--- a/app/views/documentation/api_examples/_javascript.html.haml
+++ b/app/views/documentation/api_examples/_javascript.html.haml
@@ -5,7 +5,7 @@
 - block = capture do
   :coderay
     #!javascript
-    var morph_api_url = '#{api_root}[full_name]/data.json';
+    var morph_api_url = '[scraper_url]/data.json';
     var morph_api_params = {
       // Keep this key secret!
       key: '[api_key]',
@@ -20,4 +20,4 @@
       }
     });
 
-= block.sub('[full_name]', "<span class='full_name'>#{h(@scraper.full_name)}</span>").sub('[api_key]', "<span class='unescaped-api_key'>#{current_user ? current_user.api_key : '[api_key]'}</span>").sub('[query]', "<span class='unescaped-query'>#{h(@query)}</span>").html_safe
+= block.sub('[scraper_url]', "#{api_root}<span class='full_name'>#{h(@scraper.full_name)}</span>").sub('[api_key]', "<span class='unescaped-api_key'>#{current_user ? current_user.api_key : '[api_key]'}</span>").sub('[query]', "<span class='unescaped-query'>#{h(@query)}</span>").html_safe
