--- a/app/views/documentation/api_examples/_ruby.html.haml
+++ b/app/views/documentation/api_examples/_ruby.html.haml
@@ -17,7 +17,7 @@
     require 'json'
 
     # We're always asking for json because it's the easiest to deal with
-    morph_api_url = '#{api_root}[full_name]/data.json'
+    morph_api_url = '[scraper_url]/data.json'
 
     # Keep this key secret!
     morph_api_key = '[api_key]'
@@ -30,4 +30,4 @@
 
     p JSON.parse(result)
 
-= block.sub('[full_name]', "<span class='full_name'>#{h(@scraper.full_name)}</span>").sub('[api_key]', "<span class='unescaped-api_key'>#{current_user ? current_user.api_key : '[api_key]'}</span>").sub('[query]', "<span class='unescaped-query'>#{h(@query)}</span>").html_safe
+= block.sub('[scraper_url]', "#{api_root}<span class='full_name'>#{h(@scraper.full_name)}</span>").sub('[api_key]', "<span class='unescaped-api_key'>#{current_user ? current_user.api_key : '[api_key]'}</span>").sub('[query]', "<span class='unescaped-query'>#{h(@query)}</span>").html_safe
