--- a/app/views/documentation/api_examples/_ruby.html.haml
+++ b/app/views/documentation/api_examples/_ruby.html.haml
@@ -25,7 +25,7 @@
     result = RestClient.get morph_api_url, params:
       {
         key: morph_api_key,
-        query: %q[[query]]
+        query: "[query]"
       }
 
     p JSON.parse(result)
