--- a/app/assets/stylesheets/supporters.css.scss
+++ b/app/assets/stylesheets/supporters.css.scss
@@ -78,8 +78,9 @@
 .plan-questions {
   margin-top: 6em;
   padding-top: 2em;
-  padding-bottom: 2em;
+  padding-bottom: 3em;
   background-color: #b1d05f;
+  margin-bottom: -20px;
 }
 
 .one-time-contribution {
