--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -42,7 +42,7 @@
 .plan-questions
   .container
     .row
-      .col-md-6.col-md-offset-3
+      .col-md-6.col-md-offset-3.text-center
         %h3 What is priority technical support?
         %p
           Post any question you have to the forum and we guarantee a response within
