Add attribution for the icons used. Fixes #831

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -48,3 +48,8 @@
           Post any question you have to the forum and we guarantee a response within
           two working days. You'll also get up to two hours personal assistance per
           month for scraper help, bugfixes, or feature development on morph.io.
+
+.icon-credits
+  .container
+    .row.text-center
+      %p Icon credit: mantisshrimpdesign from the Noun Project
