--- a/app/assets/stylesheets/supporters.css.scss
+++ b/app/assets/stylesheets/supporters.css.scss
@@ -80,7 +80,13 @@
   padding-top: 2em;
   padding-bottom: 3em;
   background-color: #b1d05f;
+}
+
+.icon-credits {
+  background-color: #b1d05f;
   margin-bottom: -20px;
+  padding-bottom: 1em;
+  color: white;
 }
 
 .one-time-contribution {
