Put supporter badge right next to name

--- a/app/assets/stylesheets/supporters.css.scss
+++ b/app/assets/stylesheets/supporters.css.scss
@@ -98,8 +98,12 @@ img.plan {
 }
 
 .supporter-plan {
-  color: white;
-  font-size: 1.3em;
+  a {
+    color: white;
+  }
+  img {
+    vertical-align: baseline;
+  }
 }
 
 // Animation code below from
