--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -7,16 +7,14 @@
 
       .col-md-7.owner-box
         - if @owner.name
-          %h1= @owner.name
+          %h1
+            = @owner.name
+            = render 'supporter_badge'
           %h4= @owner.nickname
         - else
-          %h1= @owner.nickname
-
-        - if current_user && current_user.see_support_levels
-          - if @owner.supporter?
-            %p{class: ('bounceInDown animated' if @new_supporter)}
-              = link_to plan_image_tag(Plan.new(@owner.stripe_plan_id), '32x32'), new_supporter_path
-              = link_to @owner.plan.name, new_supporter_path, class: 'supporter-plan'
+          %h1
+            = @owner.nickname
+            = render 'supporter_badge'
 
         .row
           .col-md-6
