Simplify language on supporters page

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -1,19 +1,22 @@
 .container
   .page-header
-    %h1.text-center
-      - if user_signed_in? && current_user.supporter?
+    - if user_signed_in? && current_user.supporter?
+      %h1.text-center
         Thanks for being a
         = current_user.plan.name.downcase
-      - else
+      %p.lead.text-center
+        Your continued support keeps it free for
+        %strong everyone
+        and makes it even more awesome.
+    - else
+      %h1.text-center
         Become a supporter
-    %p.lead.text-center
-      morph.io is
-      %strong free for everyone.
-      It's created and run by the charity
-      = link_to "OpenAustralia Foundation", "https://www.openaustraliafoundation.org.au/"
-      because we love the civic tech community.
-      By becoming a supporter you can help us make it even more incredibly useful.
-
+      %p.lead.text-center
+        morph.io is
+        %strong free.
+        Become a supporter to keep it free for
+        %strong everyone
+        and make it even more awesome.
   .row.pricing.row-centered
     = form_tag (current_user && current_user.supporter? ? supporter_path(current_user) : supporters_path), id: "supporter-signup-form", method: (current_user && current_user.supporter? ? :patch : :post) do
       = hidden_field_tag "stripeToken"
