--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,8 @@
       = favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72'
       = favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png'
     = favicon_link_tag '/favicon.ico', :rel => 'shortcut icon'
-    = javascript_include_tag "https://checkout.stripe.com/checkout.js"
+    - if @load_stripe_library
+      = javascript_include_tag "https://checkout.stripe.com/checkout.js"
     = javascript_include_tag "application"
     = javascript_include_tag Sync.adapter_javascript_url
     = render "heap_analytics"
