Add a link on the home page to the supporters index page

--- a/app/views/static/_featured_supporters.html.haml
+++ b/app/views/static/_featured_supporters.html.haml
@@ -8,3 +8,6 @@
         %ul.owner-list-simple.list-unstyled.list-inline
           - Owner.supporters(plan).each do |owner|
             %li.owner-item= link_to owner_image(owner, 60), owner
+.row
+  .col-xs-12
+    %p= link_to "See more of the #{pluralize(User.all_supporters.count, "supporter")}…", supporters_path
