Add an intro to the supporter index page

--- a/app/views/supporters/index.html.haml
+++ b/app/views/supporters/index.html.haml
@@ -1,4 +1,11 @@
 .container
+  .row.text-center
+    %h2 Thank you
+    %p.lead
+      The
+      = link_to "continued support", new_supporter_path
+      of these wonderful people keeps morph.io free for everyone and makes it even more awesome.
+
   .row
     - Plan.all_plans.each do |plan|
       - unless Owner.supporters(plan).empty?
