Add a call to action for people that aren't supporters

--- a/app/views/supporters/index.html.haml
+++ b/app/views/supporters/index.html.haml
@@ -1,10 +1,11 @@
 .container
   .row.text-center
     %h2 Thank you
-    %p.lead
-      The
-      = link_to "continued support", new_supporter_path
-      of these wonderful people keeps morph.io free for everyone and makes it even more awesome.
+    .lead
+      %p
+        The continued support of these wonderful people keeps morph.io free for everyone and makes it even more awesome.
+      - unless user_signed_in? && current_user.supporter?
+        %p Join them by #{link_to "becoming a supporter", new_supporter_path}.
 
   .row
     - Plan.all_plans.each do |plan|
