--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -22,6 +22,10 @@
         %li= link_to "Explore", scrapers_path
         %li= link_to "Pricing", new_supporter_path
         %li= link_to "Documentation", documentation_index_path
+        %li
+          = link_to "https://help.morph.io/", target: "_blank" do
+            %span.glyphicon.glyphicon-new-window{"aria-hidden" => "true"}
+            Help forum
         - if user_signed_in? && current_user.admin?
           %li(class="dropdown hidden-sm")
             %a(href="#" class="dropdown-toggle" data-toggle="dropdown")
