--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -22,7 +22,7 @@
         %li= link_to "Explore", scrapers_path
         %li= link_to "Pricing", new_supporter_path
         %li= link_to "Documentation", documentation_index_path
-        %li
+        %li.help
           = link_to "https://help.morph.io/", target: "_blank" do
             %span.glyphicon.glyphicon-new-window{"aria-hidden" => "true"}
             Help forum
